# Minecraft_Cpp

./: CMakeLists.txt  README.md
.cache/clangd/index/: MapColor.cppm.7DC5E7165E46D154.idx
src/: main.cpp  main.hpp
src/authenticate/: auth_device_code.cpp  auth_device_code.hpp  auth_manager.cpp  auth_manager.hpp  auth_minecraft.cpp  auth_minecraft.hpp  auth_session.cpp  auth_session.hpp  auth_xbl.cpp  auth_xbl.hpp  auth_xsts.cpp  auth_xsts.hpp  device_code.cpp  device_code.hpp  http.cpp  http.hpp  http_client.cpp  http_client.hpp  token_cache.cpp  token_cache.hpp  token_poll.cpp  token_poll.hpp
src/buffer/: read_buffer.cpp  read_buffer.hpp  types.hpp  write_buffer.cpp  write_buffer.hpp
src/crypto/: aes_cipher.cpp  aes_cipher.hpp  encryption.cpp  encryption.hpp
src/datatypes/nbt/: nbt_factory.hpp  nbt_reader.hpp  nbt_tag.hpp  nbt_tag_type.hpp  nbt_writer.hpp
src/datatypes/nbt/tags/: nbt_byte.hpp  nbt_byte_array.hpp  nbt_compound.hpp  nbt_double.hpp  nbt_end.hpp  nbt_factory.hpp  nbt_float.hpp  nbt_int.hpp  nbt_int_array.hpp  nbt_list.hpp  nbt_long.hpp  nbt_long_array.hpp  nbt_short.hpp  nbt_string.hpp
src/datatypes/text_component/: click_action_type.hpp  hover_action_type.hpp  text_component.cpp  text_component.hpp
src/handler/: packet_handler.cpp  packet_handler.hpp
src/handler/stages/: handshake_handler.cpp  handshake_handler.hpp  login_handler.cpp  login_handler.hpp  status_handler.cpp  status_handler.hpp
src/network/: network_manager.cpp  network_manager.hpp  socket.cpp  socket.hpp
src/network/http/: http_handler.cpp  http_handler.hpp  session_.cpp  session_.hpp
src/network/tcp/: tcp_handler.cpp  tcp_handler.hpp
src/protocol/: encryption_request.hpp  encryption_response.hpp  handshake.hpp  login_disconnect.hpp  login_start.hpp  packet.hpp  packet_direction.hpp  packet_registry.hpp  packet_state.hpp
src/protocol/client/: encryption_request.hpp  login_compression.hpp  login_disconnect.hpp  login_finished.hpp
src/protocol/client/handshaking/: handshake.hpp
src/protocol/client/login/: cookie_response.hpp  custom_query_answer.hpp  encryption_response.hpp  login_acknowledged.hpp  login_start.hpp
src/protocol/client/status/: ping_request.hpp  status_request.hpp
src/protocol/server/: encryption_response.hpp  handshake.hpp  login_acknowledged.hpp  login_start.hpp
src/protocol/server/configuration/: cookie_request.hpp  custom_payload.hpp  disconnect.hpp  finish_configuration.hpp  keep_alive.hpp  ping.hpp  reset_chat.hpp
src/protocol/server/login/: cookie_request.hpp  custom_query.hpp  encryption_request.hpp  login_compression.hpp  login_disconnect.hpp  login_finished.hpp
src/protocol/server/status/: pong_response.hpp  status_response.hpp
src/threading/: thread_manager.hpp
src/util/: buffer_util.cpp  buffer_util.hpp  buffer_utils.cpp  buffer_utils.hpp  compression_util.cpp  compression_util.hpp  fast_serializer.hpp  log_level.hpp  logger.hpp  memory_pool.cpp  memory_pool.hpp  packet_cast_util.hpp  performance_hints.hpp  uuid_util.hpp  uuid_utils.hpp
